<resources>
    <string name="app_name">iPROMS</string>
    <string name="welcome"> Welcome to iProms</string>
    <string name="intro_text">
        On the next page you will find different questionnaires designed to help us better understand your physical and emotional well being. Your answers provide important insights into your quality of life, enabling your rehabilitation team to tailor your treatment to identified concerns or needs, in order to improve your recovery journey, and support your long-term health.\n\n
        Please answer all questions as completely as possible. If a question is unclear, interpret it to the best of your ability and then pick the answer choice that feels most accurate to you. There are no right or wrong answers; we just want to understand your perspective. If you are unsure or feel unable to answer, you may skip the question.\n\n
        At the end, you will see a summary of your results, which you can review with your rehabilitation team. This will support shared decision-making and help your team align your care plan with what matters most to you. \n\n
        If you need help, do not hesitate to ask our nurses, therapists, or doctors.
    </string>
    <string name="diagnosis">Diagnosis</string>
    <string name="case_id_7_characters">Case ID (7 characters)</string>
    <string name="patient_id">Patient ID :</string>
    <string name="diagnosis__">Diagnosis :</string>
    <string name="clinic_id">Clinic: </string>
    <string-array name="clinic_names">
        <item>Cereneo</item>
        <item>Hertenstein</item>
        <item>Testing</item>
    </string-array>
    <string name="we_suggest_you_to_complete_the_following_questionnaires">We suggest you to complete the following questionnaires</string>
    <string name="thank_you_for_completing_our_questionnaires_n_you_can_now_look_at_your_results">Thank you for completing our questionnaires \n You can now look at your results</string>
    <string name="based_on_your_results">Based on your results we ask you to complete the following questionnaires.</string>
    <string name="based_on_your_results_clinical_team">Based on your results, we would suggest the following additional tests. \n\nSomeone from the clinical team will also discuss the results with you.</string>
    <string name="please_select_questionnaire">Please select a questionnaire.</string>
    <string name="data_uploaded">Data uploaded</string>
    <string name="your_results">Your results</string>
    <string name="category">Category</string>
    <string name="score">Score</string>
    <string name="description">Description</string>
    <string name="fatigue">Fatigue</string>
    <string name="sleep">Sleep: </string>
    <string name="question_fatigue">Question Fatigue</string>
    <string name="question">Question</string>
    <string name="questions_answered">Questions answered :</string>
    <string name="average_score">Average score :</string>
    <string name="skipped_questionniare">Skipped questionnaire</string>
    <string name="additional_questionnaires">Additional questionnaires</string>
    <string name="depression_and_anxiety">Depression and Anxiety</string>
    <string name="anxiety">Anxiety</string>
    <string name="questionnaire">Questionnaire :</string>
    <string name="depression_score">Depression score:</string>
    <string name="anxiety_score">Anxiety score:</string>
    <string name="total_score">Total score: </string>
    <string name="physical_total_score">Physical Total Score: </string>
    <string name="mental_total_score">Mental Total Score: </string>
    <string name="your_rating">Your rating : </string>
    <string name="btn_confirm"> Confirm</string>
    <string name="btn_go_to_results">Go to Results</string>
    <string name="btn_finish_questionnaire">Finish questionnaire</string>
    <string name="btn_skip_question">Skip question</string>
    <string name="x_skipped"> skipped)</string>
    <string name="txt_intro_depression">Tick the box beside the reply that is closest to how you have been feeling in the past week. \n \n Don’t take too long over you replies: your immediate is best.\n</string>
    <string name="percentage_completed_after_this_questionnaire">Percentage completed after this question: </string>
    <string name="past_two_weeks"> - In the past two weeks including today</string>
    <string name="never">Never\n</string>
    <string name="always">Always\n</string>
    <string name="info_seek_WEIMus_0">Almost never</string>
    <string name="info_seek_WEIMus_1">Rarely</string>
    <string name="info_seek_WEIMus_2">Sometimes</string>
    <string name="info_seek_WEIMus_3">Often</string>
    <string name="info_seek_WEIMus_4">Almost always</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="intro_fsmc">The following questionnaire is about problems in everyday life which are directly associated with an extreme form of tiredness (fatigue). This extreme form of tiredness refers to an overwhelming state of lethargy, exhaustion and lack of energy which comes on abruptly and is unrelated to any obvious external causes. It does not mean the sort of isolated episodes which everyone might experience in the course of the day, after exertion, or after a sleepless night! \n\n Please read each statement carefully. Then decide to what extent each statement applies to you and your everyday life. Please try not to base your answers on the way you are feeling at the moment; instead try to give us a picture of the way you feel in normal day-to-day life. Please put a cross in the appropriate circle (only one cross per statement please!).</string>
    <string name="summary_text">You have completed all the screening measures.\n \n
        If you are interested in sharing more details about your health situation with us, there are some optional, more detailed questionnaires coming up next.</string>
    <string name="btn_start_questionnaire">Start questionnaire</string>
    <string name="intro_question_fatigue">During the past week, I have found that :</string>
    <string name="question1_fatigue">My motivation is lower when I am fatigued.</string>
    <string name="question2_fatigue">Exercise brings on my fatigue.</string>
    <string name="question3_fatigue">I am easily fatigued.</string>
    <string name="question4_fatigue">Fatigue interferes with my physical functioning.</string>
    <string name="question5_fatigue">Fatigue causes frequent problems for me.</string>
    <string name="question6_fatigue">My fatigue prevents sustained physical functioning.</string>
    <string name="question7_fatigue">Fatigue interferes with carrying out certain duties and responsabilities.</string>
    <string name="question8_fatigue">Fatigue is among my three most disabling symptoms</string>
    <string name="question9_fatigue">Fatigue interferes with my work, family and social life.</string>
    <string name="question_intro_HADS"> Intro question HADS</string>
    <string name="question_HADS_1">I feel tense or \'wound up\'</string>
    <string name="question_HADS_1_0">not at all</string>
    <string name="question_HADS_1_1">from time to time, occassionally</string>
    <string name="question_HADS_1_2">a lot of the time</string>
    <string name="question_HADS_1_3">most of the time</string>
    <string name="question_HADS_2">I still enjoy the things I used to enjoy</string>
    <string name="question_HADS_2_0">definitely as much</string>
    <string name="question_HADS_2_1">not quite so much</string>
    <string name="question_HADS_2_2">only a little</string>
    <string name="question_HADS_2_3">hardly at all</string>
    <string name="question_HADS_3">I get a sort of frightened feeling as if something awful is about to  happen</string>
    <string name="question_HADS_3_0">not at all</string>
    <string name="question_HADS_3_1">a little, but it doesn\'t worry me</string>
    <string name="question_HADS_3_2">yes, but not too badly</string>
    <string name="question_HADS_3_3">very definitely and quite badly</string>
    <string name="question_HADS_4">I can laugh and see the funny side of things</string>
    <string name="question_HADS_4_0">as much as I always could</string>
    <string name="question_HADS_4_1">not quite so much now</string>
    <string name="question_HADS_4_2">definitely not so much now</string>
    <string name="question_HADS_4_3">not at all</string>
    <string name="question_HADS_5">Worrying thoughts go through my mind</string>
    <string name="question_HADS_5_0">only occassionally</string>
    <string name="question_HADS_5_1">from time to time, but not too often</string>
    <string name="question_HADS_5_2">a lot of the time</string>
    <string name="question_HADS_5_3">a great deal of the time</string>
    <string name="question_HADS_6">I feel cheerful</string>
    <string name="question_HADS_6_0">most of the time</string>
    <string name="question_HADS_6_1">sometimes</string>
    <string name="question_HADS_6_2">not often</string>
    <string name="question_HADS_6_3">not at all</string>
    <string name="question_HADS_7">I can sit at ease and feel relaxed</string>
    <string name="question_HADS_7_0">definitely</string>
    <string name="question_HADS_7_1">usually</string>
    <string name="question_HADS_7_2">not often</string>
    <string name="question_HADS_7_3">not at all</string>
    <string name="question_HADS_8">I feel as if I am slowed down</string>
    <string name="question_HADS_8_0">not at all</string>
    <string name="question_HADS_8_1">sometimes</string>
    <string name="question_HADS_8_2">very often</string>
    <string name="question_HADS_8_3">nearly all the time</string>
    <string name="question_HADS_9">I get a sort of frightened feeling like \'butterflies\' in the stomach</string>
    <string name="question_HADS_9_0">not at all</string>
    <string name="question_HADS_9_1">occassionally</string>
    <string name="question_HADS_9_2">quite often</string>
    <string name="question_HADS_9_3">very often</string>
    <string name="question_HADS_10">I have lost interest in my appearance</string>
    <string name="question_HADS_10_0">I take just as much care as ever</string>
    <string name="question_HADS_10_1">I may not take quite as much care</string>
    <string name="question_HADS_10_2">I don\'t take as much care as I should</string>
    <string name="question_HADS_10_3">definitely</string>
    <string name="question_HADS_11">I feel restless as I have to be on the move</string>
    <string name="question_HADS_11_0">not at all</string>
    <string name="question_HADS_11_1">not very much</string>
    <string name="question_HADS_11_2">quite a lot</string>
    <string name="question_HADS_11_3">very much indeed</string>
    <string name="question_HADS_12">I look forward with enjoyment to things</string>
    <string name="question_HADS_12_0">as much as I ever did</string>
    <string name="question_HADS_12_1">rather less than I used to</string>
    <string name="question_HADS_12_2">definitely less than I used to</string>
    <string name="question_HADS_12_3">hardly at all</string>
    <string name="question_HADS_13">I get sudden feelings of panic</string>
    <string name="question_HADS_13_0">not at all</string>
    <string name="question_HADS_13_1">not very often</string>
    <string name="question_HADS_13_2">quite often</string>
    <string name="question_HADS_13_3">very often indeed</string>
    <string name="patient_id_7_characters">Patient ID (7 characters)</string>
    <string name="stroke">Stroke</string>
    <string name="parkinson">Parkinson</string>
    <string name="ms">MS</string>
    <string name="other">Other</string>
    <string name="precise_your_diagnosis">Precise your diagnosis</string>
    <string name="confirm">Confirm</string>
    <string name="introduction">Introduction</string>
    <string name="go_to_questionnaires">Go to questionnaires</string>
</resources>