<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.IntroductionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtIntroTitle"
        android:text="@string/introduction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"/>

    <ScrollView
        android:layout_below="@id/txtIntroTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:id="@+id/txtIntroWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="center"
                android:text="@string/intro_text"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Button
                android:layout_width="400dp"
                android:layout_height="90dp"
                android:id="@+id/btnConfirmIntro"
                android:background="@drawable/bg_button"
                android:text="@string/go_to_questionnaires"
                android:textSize="20sp"
                android:layout_marginTop="100dp"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>